chapter_04/logger-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: logger
  name: logger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logger
  template:
    metadata:
      labels:
        app: logger
    spec:
      containers:
      - image: brainupgrade/request-logger
        name: request-logger
        ports:
          - name: http
            containerPort: 8080
