chapter_04/externalname-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-db
spec:
  type: ExternalName
  externalName: app-db.global-bank.com
