chapter_04/logger-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: logger
  name: logger
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: logger
